DTSPB-1091: merged from master REVERT