@@ -23,7 +23,6 @@ import javax.annotation.PostConstruct;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.Charset;
 import java.nio.file.Files;
 
 @ContextConfiguration(classes = TestContextConfiguration.class)
@@ -45,12 +44,6 @@ public class FunctionalTestUtils {
 
     @Value("${probate.caseworker.password}")
     private String caseworkerPassword;
-
-    @Value("${probate.solicitor.email}")
-    private String solicitorEmail;
-
-    @Value("${probate.solicitor.password}")
-    private String solicitorPassword;
 
     @Value("${evidence.management.url}")
     private String dmStoreUrl;
@@ -80,7 +73,7 @@ public class FunctionalTestUtils {
     public String getJsonFromFile(String fileName) {
         try {
             File file = ResourceUtils.getFile(this.getClass().getResource("/json/" + fileName));
-            return new String(Files.readString(file.toPath(), Charset.forName("UTF-8")));
+            return new String(Files.readAllBytes(file.toPath()));
         } catch (IOException e) {
             e.printStackTrace();
             return null;
@@ -107,41 +100,16 @@ public class FunctionalTestUtils {
             new Header("Content-Type", ContentType.JSON.toString()));
     }
 
-    public Headers getHeaders(String userName, String password, Integer id) {
-        String authorizationToken = serviceAuthTokenGenerator.generateClientToken(userName, password);
-        String serviceToken = serviceAuthTokenGenerator.generateServiceToken();
-
-        return Headers.headers(
-            new Header("ServiceAuthorization", serviceToken),
-            new Header("Content-Type", ContentType.JSON.toString()),
-            new Header("Authorization", "Bearer " + authorizationToken),
-            new Header("user-id", id.toString()));
-    }
-
     public Headers getHeadersWithUserId() {
         return getHeadersWithUserId(serviceToken, userId);
     }
 
     public Headers getHeadersWithUserId(String serviceToken, String userId) {
         return Headers.headers(
-                new Header("ServiceAuthorization", serviceToken),
-                new Header("Content-Type", ContentType.JSON.toString()),
-                new Header("Authorization",
-                        serviceAuthTokenGenerator.generateAuthorisation(caseworkerEmail, caseworkerPassword)),
-                new Header("user-id", userId));
-    }
-
-    public Headers getSolicitorHeadersWithUserId() {
-        return getSolicitorHeadersWithUserId(serviceToken, userId);
-    }
-
-    private Headers getSolicitorHeadersWithUserId(String serviceToken, String userId) {
-        return Headers.headers(
-                new Header("ServiceAuthorization", serviceToken),
-                new Header("Content-Type", ContentType.JSON.toString()),
-                new Header("Authorization",
-                        serviceAuthTokenGenerator.generateAuthorisation(solicitorEmail, solicitorPassword)),
-                new Header("user-id", userId));
+            new Header("ServiceAuthorization", serviceToken),
+            new Header("Content-Type", ContentType.JSON.toString()),
+            new Header("Authorization", serviceAuthTokenGenerator.generateAuthorisation(caseworkerEmail, caseworkerPassword)),
+            new Header("user-id", userId));
     }
 
     public String downloadPdfAndParseToString(String documentUrl) {
@@ -195,6 +163,17 @@ public class FunctionalTestUtils {
         return parsedText;
     }
 
+    public Headers getHeaders(String userName, String password, Integer id) {
+        String authorizationToken = serviceAuthTokenGenerator.generateClientToken(userName, password);
+        String serviceToken = serviceAuthTokenGenerator.generateServiceToken();
+
+        return Headers.headers(
+            new Header("ServiceAuthorization", serviceToken),
+            new Header("Content-Type", ContentType.JSON.toString()),
+            new Header("Authorization", "Bearer " + authorizationToken),
+            new Header("user-id", id.toString()));
+    }
+
     public String getCaseworkerUserId() {
         return getUserId(caseworkerEmail, caseworkerPassword);
     }
@@ -238,16 +217,14 @@ public class FunctionalTestUtils {
 
     public String createCaseAsCaseworker(String caseJson, String eventId) {
         String user = getCaseworkerUserId();
-        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
-            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/event-triggers/" + eventId + "/token";
+        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/event-triggers/" + eventId + "/token";
         Response startResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
             .when().get(ccdStartAsCaseworkerUrl).andReturn();
         String token = startResponse.getBody().jsonPath().get("token");
         String caseCreateJson = caseJson.replaceAll(TOKEN_PARM, token);
-        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
-            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases";
+        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases";
         Response submitResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -258,8 +235,7 @@ public class FunctionalTestUtils {
 
     public String findCaseAsCaseworker(String caseId) {
         String user = getCaseworkerUserId();
-        String ccdFindCaseUrl = coreCaseDataApiUrl + "/caseworkers/" + user
-            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId;
+        String ccdFindCaseUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId;
         Response startResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -275,9 +251,7 @@ public class FunctionalTestUtils {
 
     public String startUpdateCaseAsCaseworker(String caseId, String eventId) {
         String user = getCaseworkerUserId();
-        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
-            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/event-triggers/" + eventId
-            + "/token";
+        String ccdStartAsCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/event-triggers/" + eventId + "/token";
         Response startResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -287,8 +261,7 @@ public class FunctionalTestUtils {
 
     public String continueUpdateCaseAsCaseworker(String caseJson, String caseId) {
         String user = getCaseworkerUserId();
-        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user
-            + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/events";
+        String submitForCaseworkerUrl = coreCaseDataApiUrl + "/caseworkers/" + user + "/jurisdictions/PROBATE/case-types/GrantOfRepresentation/cases/" + caseId + "/events";
         Response submitResponse = RestAssured.given()
             .relaxedHTTPSValidation()
             .headers(getHeadersWithCaseworkerUser())
@@ -302,7 +275,8 @@ public class FunctionalTestUtils {
     }
 
     public String addAttribute(String json, String attributeKey, String attributeValue) {
-        return json.replaceAll("\"applicationID\": \"603\",",
-            "\"applicationID\": \"603\",\"" + attributeKey + "\": \"" + attributeValue + "\",");
+        return json.replaceAll("\"applicationID\": \"603\",", "\"applicationID\": \"603\",\"" + attributeKey + "\": \"" + attributeValue + "\",");
     }
+
+
 }
